<resources>
    <string name="app_name">FoodFinder</string>
    <string name="registration">Sign Up</string>
    <string name="username">Username</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="email_address">Email Address</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="phone_number">Phone Number</string>
    <string name="a_valid_password_has_at_least_8_characters_and_includes_at_lease_one_uppercase_letter_one_lowercase_letter_one_number_and_one_special_character">A valid password has at least 8 characters and includes at lease one uppercase letter, one lowercase letter, one number and one special character.</string>
    <string name="create_account">Create Account</string>
    <string name="login">Sign In</string>
    <string name="forgot">Forgot P/W</string>
    <string name="SignupLn">Sign Up</string>
    <string name="Icon">FoodFinder Icon</string>
    <string name="FindRestaurants">Find Food</string>
    <string name="ManageAccount">Manage Account</string>
    <string name="SignOut">Sign Out</string>
    <string name="gpsBtn">GPS</string>
    <string name="searchBar">Search</string>
    <string name="googlemapsAPI">https://maps.googleapis.com/maps/api/timezone/json?location=39.6034810,-119.6822510&amp;timestamp=1331161200&amp;key=AIzaSyCe6iS6KAMoGFR0Apt27biTV4jKqgWrkJI</string>
    <string-array name="airportSearch">
        <item>Airport 1</item>
        <item>Airport 2</item>
        <item>Airport 3</item>
        <item>Airport 4</item>
    </string-array>
    <string name="accName">Account Name</string>
    <string name="firstLastName">Joe Bob</string>
    <string name="Edit">EDIT</string>
    <string name="profilePic">Profile Picture</string>
    <string name="recentReviews">Recent Reviews</string>
    <string name="backBtn">Back</string>

    <string-array name="restaurants">
        <item>McDonald\'s \nRatings: 4.2</item>
        <item>Tim Hortons \nRatings: 4.1</item>
        <item>A&amp;W \nRatings: 3.5</item>
        <item>Chipotle \nRatings: 3.1</item>
        <item>Dairy Queen \nRatings: 4.0</item>
        <item>New York Fries \nRatings: 4.5</item>
    </string-array>

    <string-array name="menuItems">
        <item>Menu Item 1</item>
        <item>Menu Item 2</item>
        <item>Menu Item 3</item>
        <item>Menu Item 4</item>
        <item>Menu Item 5</item>
    </string-array>

    <string name="reviewBtn">Reviews</string>
    <string name="restaurantImageDescription">Placeholder image for restaurant</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="get_location">get Location</string>
    <string name="username_reg">Username</string>
    <string name="map">Map</string>
    <string name="greeting">Hello</string>

</resources>