<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:paddingLeft="16dp"
    android:paddingRight="16dp">

    <TextView
        android:id="@+id/registration"
        android:layout_width="214dp"
        android:layout_height="50dp"
        android:layout_marginTop="70dp"
        android:layout_marginBottom="30dp"
        android:text="@string/registration"
        android:textAlignment="center"
        android:layout_centerHorizontal="true"
        android:textSize="30sp"/>



    <EditText
        android:id="@+id/firstname"
        android:layout_width="180dp"
        android:layout_height="50dp"
        android:layout_below="@+id/registration"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/first_name"
        android:inputType="textPersonName"
        android:textColorHint="#757575" />

    <EditText
        android:id="@+id/lastname"
        android:layout_width="180dp"
        android:layout_height="50dp"
        android:layout_below="@id/registration"
        android:layout_toEndOf="@+id/firstname"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/last_name"
        android:inputType="textPersonName"
        android:textColorHint="#757575" />

    <EditText
        android:layout_centerHorizontal="true"
        android:id="@+id/phoneNum"
        android:layout_below="@+id/firstname"
        android:layout_width="365dp"
        android:layout_height="50dp"
        android:hint="@string/phone_number" />

    <EditText
        android:layout_centerHorizontal="true"
        android:id="@+id/email"
        android:layout_width="365dp"
        android:layout_height="50dp"
        android:layout_below="@+id/phoneNum"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/email_address"
        android:inputType="textEmailAddress"
        android:textColorHint="#757575" />

    <EditText
        android:layout_centerHorizontal="true"
        android:id="@+id/password"
        android:layout_below="@+id/email"
        android:layout_width="365dp"
        android:layout_height="50dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:minHeight="48dp"
        android:textColorHint="#757575"
        tools:ignore="SpeakableTextPresentCheck" />

    <EditText
        android:layout_centerHorizontal="true"
        android:id="@+id/passwordRepeat"
        android:layout_width="365dp"
        android:layout_height="50dp"
        android:layout_below="@+id/password"
        android:ems="10"
        android:hint="@string/confirm_password"
        android:inputType="textPassword"
        android:textColorHint="#757575" />

    <TextView
        android:layout_centerHorizontal="true"
        android:id="@+id/hint"
        android:layout_width="365dp"
        android:layout_height="100dp"
        android:layout_below="@+id/passwordRepeat"
        android:text="@string/a_valid_password_has_at_least_8_characters_and_includes_at_lease_one_uppercase_letter_one_lowercase_letter_one_number_and_one_special_character"
        android:textSize="15sp"
        app:layout_constraintVertical_bias="0.758" />

    <Button
        android:id="@+id/btnCreateAccount3"
        android:layout_width="300dp"
        android:layout_height="68dp"
        android:layout_below="@+id/hint"
        android:layout_centerHorizontal="true"
        android:text="@string/create_account"
        android:textSize="25sp"
        app:layout_constraintVertical_bias="0.861" />

</RelativeLayout>
