<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

    <EditText
        android:layout_marginTop="100dp"
        android:id="@+id/usernameLogin"
        android:layout_width="365dp"
        android:layout_height="50dp"
        android:hint="@string/phone_number"
        android:autofillHints=""
        android:inputType="phone"
        android:layout_gravity="center"/>


    <EditText
        android:layout_marginTop="65dp"
        android:id="@+id/passwordLogin"
        android:layout_width="365dp"
        android:layout_height="50dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:minHeight="48dp"
        android:textColorHint="#757575"
        tools:ignore="SpeakableTextPresentCheck"
        android:layout_gravity="center"/>


    <Button
        android:layout_marginTop="20dp"
        android:id="@+id/LoginBtn"
        android:layout_width="125dp"
        android:layout_height="61dp"
        android:text="@string/login"
        android:textSize="16sp"
        app:layout_constraintVertical_bias="0.861"
        android:layout_gravity="center"/>

    <LinearLayout
        android:layout_width="300dp"
        android:layout_height="70dp"
        android:layout_gravity="center"
        android:orientation="horizontal"
        android:layout_marginTop="50dp">
        <Button
            android:id="@+id/ForgotPWBtn"
            android:layout_width="125dp"
            android:layout_height="61dp"
            android:text="@string/forgot"
            android:textSize="16sp"
            app:layout_constraintVertical_bias="0.861"
            android:layout_gravity="center_vertical"
            />

            <Button
                android:id="@+id/SignupBtn"
                android:layout_width="125dp"
                android:layout_height="61dp"
                android:text="@string/SignupLn"
                android:textSize="16sp"
                app:layout_constraintVertical_bias="0.861"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="50dp"

                />
    </LinearLayout>

</LinearLayout>