<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <GridLayout
        android:id="@+id/gridLayout2"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/secondaryColor"
        app:layout_constraintBottom_toBottomOf="parent">

        <ImageView
            android:id="@+id/NavBarSearch"
            android:layout_width="70dp"
            android:layout_height="match_parent"
            android:layout_marginStart="55dp"
            android:contentDescription="@string/login"
            android:padding="10dp"
            android:src="@drawable/search_svgrepo_com"
            android:onClick="toFindFood"/>


        <ImageView
            android:id="@+id/NavBarHome"
            android:layout_width="70dp"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:contentDescription="@string/login"
            android:onClick="toMain"
            android:padding="5dp"
            android:src="@drawable/home_icon_silhouette" />

        <ImageView
            android:id="@+id/NavBarProfile"
            android:layout_width="70dp"
            android:layout_height="match_parent"
            android:layout_marginEnd="55dp"
            android:contentDescription="@string/login"
            android:padding="5dp"
            android:src="@drawable/profile"
            android:onClick="toManageAccount"/>
    </GridLayout>

    <ImageView
        android:id="@+id/profilePicture"
        android:layout_width="206dp"
        android:layout_height="201dp"
        app:layout_constraintBottom_toTopOf="@+id/gridLayout2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.114"
        tools:srcCompat="@tools:sample/avatars"
        android:contentDescription="@string/profilePic" />

    <TextView
        android:id="@+id/nameManage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="56dp"
        android:layout_marginBottom="40dp"
        android:text="@string/firstLastName"
        android:textSize="10pt"
        app:layout_constraintBottom_toTopOf="@+id/phoneNumberManage"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/usernameManage"
        app:layout_constraintVertical_bias="0.878" />

    <TextView
        android:id="@+id/emailAddressManage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="60dp"
        android:layout_marginBottom="136dp"
        android:text="@string/email_address"
        android:textSize="10pt"
        app:layout_constraintBottom_toTopOf="@+id/gridLayout2"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/phoneNumberManage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="56dp"
        android:layout_marginBottom="36dp"
        android:text="@string/phone_number"
        android:textSize="10pt"
        app:layout_constraintBottom_toTopOf="@+id/emailAddressManage"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/usernameManage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/accName"
        android:textSize="12pt"
        app:layout_constraintBottom_toTopOf="@+id/gridLayout2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profilePicture"
        app:layout_constraintVertical_bias="0.044" />

    <Button
        android:id="@+id/toRecentReviews"
        android:layout_width="170dp"
        android:layout_height="44dp"
        android:text="@string/recentReviews"
        android:onClick="toRecentReviews"
        app:layout_constraintBottom_toTopOf="@+id/gridLayout2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/usernameManage"
        app:layout_constraintVertical_bias="0.925" />

</androidx.constraintlayout.widget.ConstraintLayout>