<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/greeting"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintVertical_bias="0.16"
        android:text="@string/greeting"
        android:textSize="17sp"

    />

    <Button
        android:id="@+id/FindFoodButton"
        android:layout_width="200dp"
        android:layout_height="55dp"
        android:text="@string/FindRestaurants"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintVertical_bias="0.25"
        android:onClick="toFindFood"
        />

    <Button
        android:id="@+id/ManageAccount"
        android:layout_width="200dp"
        android:layout_height="55dp"
        android:text="@string/ManageAccount"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintVertical_bias="0.4"
        android:onClick="toManageAccount"
        />

    <Button
        android:id="@+id/SignOutBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/SignOut"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintVertical_bias="0.75"
        />

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="35dp"
        android:background="@color/secondaryColor"
        app:layout_constraintBottom_toBottomOf="parent"
        >
        <ImageView
            android:id="@+id/NavBarSearch"
            android:layout_marginStart="55dp"
            android:layout_width="70dp"
            android:layout_height="match_parent"
            android:padding="10dp"
            android:src="@drawable/search_svgrepo_com"
            android:contentDescription="@string/login"
            android:onClick="toFindFood"
            />


        <ImageView
            android:id="@+id/NavBarHome"
            android:layout_width="70dp"
            android:layout_height="match_parent"
            android:padding="5dp"
            android:layout_gravity="center"
            android:src="@drawable/home_icon_silhouette"
            android:contentDescription="@string/login"
            android:onClick="toMain"
            />

        <ImageView
            android:id="@+id/NavBarProfile"
            android:layout_width="70dp"
            android:layout_height="match_parent"
            android:padding="5dp"
            android:layout_marginEnd="55dp"
            android:src="@drawable/profile"
            android:contentDescription="@string/login"
            android:onClick="toManageAccount"
            />
    </GridLayout>

</androidx.constraintlayout.widget.ConstraintLayout>