<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RestaurantListActivity">

    <GridLayout
        android:id="@+id/gridLayout"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/secondaryColor"
        app:layout_constraintBottom_toBottomOf="parent">

        <ImageView
            android:id="@+id/NavBarSearch"
            android:layout_width="70dp"
            android:layout_height="match_parent"
            android:layout_marginStart="55dp"
            android:contentDescription="@string/login"
            android:padding="10dp"
            android:src="@drawable/search_svgrepo_com" />


        <ImageView
            android:id="@+id/NavBarHome"
            android:layout_width="70dp"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:contentDescription="@string/login"
            android:onClick="toMain"
            android:padding="5dp"
            android:src="@drawable/home_icon_silhouette" />

        <ImageView
            android:id="@+id/NavBarProfile"
            android:layout_width="70dp"
            android:layout_height="match_parent"
            android:layout_marginEnd="55dp"
            android:contentDescription="@string/login"
            android:padding="5dp"
            android:src="@drawable/profile" />
    </GridLayout>
    <Button
        android:id="@+id/restBackBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="backBtnOnClick"
        android:text="@string/backBtn"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.15"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.05" />

    <Button
        android:id="@+id/toMapBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="toMap"
        android:text="@string/map"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.85"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.05" />

    <androidx.fragment.app.FragmentContainerView
        android:id="@+id/restaurantListFragment"
        android:layout_width="323dp"
        android:layout_height="477dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>