<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".RestaurantMapActivity">


    <GridLayout
        android:id="@+id/gridLayout"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/secondaryColor"
        app:layout_constraintBottom_toBottomOf="parent">

        <ImageView
            android:id="@+id/NavBarSearch"
            android:layout_width="70dp"
            android:layout_height="match_parent"
            android:layout_marginStart="55dp"
            android:contentDescription="@string/login"
            android:padding="10dp"
            android:src="@drawable/search_svgrepo_com" />


        <ImageView
            android:id="@+id/NavBarHome"
            android:layout_width="70dp"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:contentDescription="@string/login"
            android:onClick="toMain"
            android:padding="5dp"
            android:src="@drawable/home_icon_silhouette" />

        <ImageView
            android:id="@+id/NavBarProfile"
            android:layout_width="70dp"
            android:layout_height="match_parent"
            android:layout_marginEnd="55dp"
            android:contentDescription="@string/login"
            android:padding="5dp"
            android:src="@drawable/profile" />
    </GridLayout>

    <Button
        android:id="@+id/button"
        android:layout_width="109dp"
        android:layout_height="55dp"
        android:text="@string/get_location"
        android:onClick="getLocation"
        app:layout_constraintBottom_toTopOf="@+id/gridLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.945"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.025" />

    <Spinner
        android:id="@+id/airportList"
        android:layout_width="247dp"
        android:layout_height="48dp"
        app:layout_constraintBottom_toTopOf="@+id/gridLayout"
        app:layout_constraintEnd_toStartOf="@+id/button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.038" />

    <EditText
        android:id="@+id/editTextTextPersonName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="30dp"
        android:layout_marginTop="10dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:hint="@string/searchBar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.134"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/airportList"
        android:autofillHints="" />

    <fragment
        android:id="@+id/map"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="350dp"
        android:layout_height="460dp"
        android:layout_marginTop="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName" />

</androidx.constraintlayout.widget.ConstraintLayout>