<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RestaurantFragment">

    <GridLayout
        android:id="@+id/gridLayout"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/secondaryColor"
        app:layout_constraintBottom_toBottomOf="parent">

        <ImageView
            android:id="@+id/NavBarSearch"
            android:layout_width="70dp"
            android:layout_height="match_parent"
            android:layout_marginStart="55dp"
            android:contentDescription="@string/login"
            android:padding="10dp"
            android:src="@drawable/search_svgrepo_com" />


        <ImageView
            android:id="@+id/NavBarHome"
            android:layout_width="70dp"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:contentDescription="@string/login"
            android:onClick="toMain"
            android:padding="5dp"
            android:src="@drawable/home_icon_silhouette" />

        <ImageView
            android:id="@+id/NavBarProfile"
            android:layout_width="70dp"
            android:layout_height="match_parent"
            android:layout_marginEnd="55dp"
            android:contentDescription="@string/login"
            android:padding="5dp"
            android:src="@drawable/profile" />
    </GridLayout>

    <TextView
        android:id="@+id/restaurantNameTextView"
        android:layout_width="119dp"
        android:layout_height="53dp"
        android:gravity="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.147"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/button3"
        android:layout_width="119dp"
        android:layout_height="52dp"
        android:text="@string/reviewBtn"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.849"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <ImageView
        android:id="@+id/restaurantImage"
        android:layout_width="322dp"
        android:layout_height="160dp"
        android:contentDescription="@string/restaurantImageDescription"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.159"
        tools:ignore="ImageContrastCheck"
        tools:src="@tools:sample/avatars" />

    <androidx.fragment.app.FragmentContainerView
        android:id="@+id/menuListFragment"
        android:layout_width="410dp"
        android:layout_height="467dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />
</androidx.constraintlayout.widget.ConstraintLayout>